# dspy-multi-agent

./: .gitignore  README.md  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/502760429829101299/: meta.yaml
mlruns/502760429829101299/traces/tr-0fc69ef75b123bbec2caf82cd8082a1a/: trace_info.yaml
mlruns/502760429829101299/traces/tr-123212b31452c1f4e50822d833b7ca9b/: trace_info.yaml
mlruns/502760429829101299/traces/tr-2845b556cdb0393ff238e2d611c29478/: trace_info.yaml
mlruns/502760429829101299/traces/tr-2f0b28e0c8a95ee97d259759742cbeb3/: trace_info.yaml
mlruns/502760429829101299/traces/tr-33388138c1cf86693370a89482f8d8fe/: trace_info.yaml
mlruns/502760429829101299/traces/tr-36fa0be8746239db0c49f48ed52a2109/: trace_info.yaml
mlruns/502760429829101299/traces/tr-3cfe8623cefdca8e4037e53223bd6c34/: trace_info.yaml
mlruns/502760429829101299/traces/tr-54bb465eefb17cca8f3112ccaee89a44/: trace_info.yaml
mlruns/502760429829101299/traces/tr-5e9632cea4bda8a0577c4695211c0e9b/: trace_info.yaml
mlruns/502760429829101299/traces/tr-664359bc4f15d3d32fe5eb45b9e8e1f1/: trace_info.yaml
mlruns/502760429829101299/traces/tr-6ad7d7bc4ea103ea99df16db07c480cf/: trace_info.yaml
mlruns/502760429829101299/traces/tr-91efbf8d3b50afab605d9b69ac920279/: trace_info.yaml
mlruns/502760429829101299/traces/tr-9f365f20fe49419815b5a2066a1ca299/: trace_info.yaml
src/: main.py  signatures.py
src/agents/: __init__.py  event_weather.py  movie_analyst.py  outfit_recomendation.py  user_profile.py
src/datasource/: wardrobe.py  weather.py
(+64 files in other folders)
